force-app/main/default/objects/Broker_Account__c/Broker_Account__c.object-meta.xml
<CustomObject>
    <description>Stores trader broker account details</description>
    <label>Broker Account</label>
    <nameField>
        <label>Broker Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broker Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>