force-app/main/default/objects/Broker_Account__c/fields/Available_Margin__c.field-meta.xml
<CustomField>
    <fullName>Available_Margin__c</fullName>
    <label>Available Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>