force-app/main/default/objects/Broker_Account__c/fields/Available_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Available_Margin_Percent__c</fullName>
    <formula>IF(
Available_Margin__c + Used_Margin__c &gt; 0,
Available_Margin__c /
(Available_Margin__c + Used_Margin__c),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>