force-app/main/default/objects/Broker_Account__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default Broker</label>
    <type>Checkbox</type>
</CustomField>