force-app/main/default/objects/Broker_Account__c/fields/Broker_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account_ID__c</fullName>
    <displayFormat>BA-{00000}</displayFormat>
    <label>Broker Account ID</label>
    <type>AutoNumber</type>
</CustomField>