force-app/main/default/objects/Broker_Account__c/fields/Broker_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account_Number__c</fullName>
    <label>Broker Account Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>