force-app/main/default/objects/Broker_Account__c/fields/Broker_Health__c.field-meta.xml
<CustomField>
    <fullName>Broker_Health__c</fullName>
    <formula>IF (
  ISPICKVAL (API_Status__c, &quot;Connected&quot;),
  &quot;Healthy&quot;,
  IF (ISPICKVAL (API_Status__c, &quot;Testing&quot;), &quot;Testing&quot;, &quot;Attention Required&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Health</label>
    <type>Text</type>
</CustomField>