force-app/main/default/objects/Broker_Account__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <label>Broker Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>5Paisa</fullName>
            </value>
            <value>
                <fullName>Angel One</fullName>
            </value>
            <value>
                <fullName>Dhan</fullName>
            </value>
            <value>
                <fullName>Groww</fullName>
            </value>
            <value>
                <fullName>HDFC Sky</fullName>
            </value>
            <value>
                <fullName>ICICI Direct</fullName>
            </value>
            <value>
                <fullName>Interactive Brokers</fullName>
            </value>
            <value>
                <fullName>Kotak Securities</fullName>
            </value>
            <value>
                <fullName>Upstox</fullName>
            </value>
            <value>
                <fullName>Zerodha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>