force-app/main/default/objects/Broker_Account__c/fields/Brokerage_Plan__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Plan__c</fullName>
    <label>Brokerage Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat ₹20</fullName>
            </value>
            <value>
                <fullName>Percentage Based</fullName>
            </value>
            <value>
                <fullName>Zero Brokerage</fullName>
            </value>
            <value>
                <fullName>Premium Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>