force-app/main/default/objects/Broker_Account__c/fields/Last_API_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_API_Sync__c</fullName>
    <label>Last API Sync</label>
    <type>DateTime</type>
</CustomField>