force-app/main/default/objects/Broker_Account__c/fields/Trader__c.field-meta.xml
<CustomField>
    <fullName>Trader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>One trader can own many broker accounts.</inlineHelpText>
    <label>Trader</label>
    <referenceTo>Trader__c</referenceTo>
    <relationshipLabel>Broker Accounts</relationshipLabel>
    <relationshipName>Broker_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>