force-app/main/default/objects/Broker_Account__c/validationRules/Available_Margin_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_Margin_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Margin__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Available_Margin__c</errorDisplayField>
    <errorMessage>Available Margin cannot be negative.</errorMessage>
</ValidationRule>