force-app/main/default/objects/Broker_Account__c/validationRules/Closed_broker_accounts_must_have_API_Sta.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_broker_accounts_must_have_API_Sta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Account_Status__c,&quot;Closed&quot;),
NOT(
ISPICKVAL(API_Status__c,&quot;Disconnected&quot;)
)
)</errorConditionFormula>
    <errorMessage>Closed broker accounts must have API Status = Disconnected.</errorMessage>
</ValidationRule>