force-app/main/default/objects/Broker_Account__c/validationRules/Used_Margin_cannot_exceed_Available_Marg.validationRule-meta.xml
<ValidationRule>
    <fullName>Used_Margin_cannot_exceed_Available_Marg</fullName>
    <active>true</active>
    <errorConditionFormula>Used_Margin__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Used_Margin__c</errorDisplayField>
    <errorMessage>Used Margin cannot exceed Available Margin + Used Margin.</errorMessage>
</ValidationRule>